<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">beauket</string>
    <string name="slsd1">귀하의 피부는 매우 젊습니다! 피부의 항산화가 강하고 활성 산소량이 적으며 콜라겐이 풍부하여 윤기와 탄력이 있습니다. 일상적인 피부관리를 지속하면서 당분 섭취를 조절하고 보습 및 항산화, 햇빛 노출 방지를 통해 주름 발생을 효과적으로 예방하시기 바랍니다.</string>
    <string name="slsd2">귀하의 노화속도는 정상이며 피부의 항산화 능력이 비교적 강합니다. 일상적인 보습 및 햇빛 노출 방지와 당분 섭취 조절, 적절한 휴식 시간 유지를 통해 피부의 전반적인 탄력을 유지하시기 바랍니다.</string>
    <string name="slsd3">노화 속도가 비교적 빠르고 얼굴 피부가 얇고 건조하며, 콜라겐과 히알루론산 손실 징후를 보입니다. 피부 탄력이 점차 전반적으로 약화되고 피하 지방 조직이 감소하며, 콜라겐과 엘라스틴이 감소하면서 처지면서 주름이 발생합니다. 튀긴 음식과 당분이 높은 음식 섭취를 줄이고 보습과 자외선 차단, 항산화 처리, 그리고 적절한 휴식 시간을 유지할 것을 권장합니다
</string>
    <string name="pfpz1">피부가 매우 건강하고 피부장벽이 건강한 상태이며, 각질층이 피부의 수분을 잘 유지시킴으로써 피부 표면 세균과 유익하지 않은 자극 요인에 저항할 수 있게 해주고 있습니다. 평소의 스킨 케어 프로그램을 유지하면서 과도한 세정을 피하고 자극적인 스킨 케어 제품을 사용하지 않도록 주의하는 동시에 적시에 수분을 보충해 주십시오.</string>
    <string name="pfpz2">피부장벽이 손상되었습니다. 주의하셔야 합니다! 피부장벽이 손상되면 피부의 저항력, 면역력 및 보습력이 약화되고 표피를 통한 수분 상실이 증가하여 감염 및 외부 자극에 대한 민감성이 증가할 수 있습니다. 과도한 세정 및 각질제거를 피하고 부드러운 스킨케어 제품을 이용해 유수분밸런스를 유지해줍니다.</string>
    <string name="pfpz3">피부 장벽이 심각하게 손상되었습니다! 피부가 약하고 각질층이 얇아서 피부 수분 보유 능력이 떨어지며, 쉽게 건조해지고 각질 탈락이 일어납니다. 외부 자극에 대한 저항 능력이 떨어지고 피부가 민감해지며 연약해집니다. 부드러운 클렌징 제품을 사용하고 세정 빈도를 줄이는 것이 좋습니다. 저자극 제품을 적절하게 사용하고, 유수분밸런스를 유지해주며 자외선 차단에 세심한 주의를 기울여 주시기 바랍니다.</string>
    <string name="hssdx1">멜라닌 대사 능력이 약하고 피부 표면과 피하층이 멜라닌 침착이 비교적 많아서 검은색 반점이나 피부톤 불균형이 나타나기 쉽습니다. 자외선에 지나치게 노출되면 기저층의 멜라닌 세포가 활발하게 활동하여 색소가 증가하며, 멜라닌 분포의 균형이 무너지고 피부가 어둡게 변하게 될 수 있습니다. 매일 자외선을 차단하고 주의하여 휴식을 취하며, 흑미, 검은 콩, 검은 참깨, 호두 등을 많이 섭취하십시오. 멜라닌 생성 및 분해 대사를 조절하는 피부 관리 제품 또는 약물의 외부 사용은 멜라닌의 정상적인 대사를 촉직하고 색소침착을 개선하는데 도움이 될 수 있습니다.</string>
    <string name="hssdx2">멜라닌이 정상적으로 대사될 수 있으며, 피부 표피와 피하층의 멜라닌이 건강한 상태입니다. 주의해야 할 점은 내분비 장애, 수면 부족 및 장기적인 자외선 노출로 인해 멜라닌 대사 속도가 느려져 색소 반점이 형성되고 피부 색소가 고르지 않게 되지 않도록 해야 한다는 것입니다. 따라서 피부 관리와 양호한 생활 습관을 유지하셔야 합니다.</string>
    <string name="hssdx3">멜라닌 대사 능력이 강하고 피부에 색소침착이 적으며, 피부톤이 균일하고 색소침착이 쉽게 발생하지 않습니다. 멜라닌의 분포 불균형 상태를 방지하기 위해 지속적으로 항산화 및 자외선 차단, 그리고 유수분밸런스 균형을 유지하여 피부 노폐물이 쌓이는 것을 방지해야 합니다.</string>
    <string name="pore_top">아침 저녁 세정시 미지근한 물로 모공이 열리게 하고 아미노산 클렌저를 사용해 T존, 볼 및 그밖의 모공이 비교적 큰 영역을 원 형태로 문지른 다음 충분한 양의 물로 헹구십시오.</string>
    <string name="pore_mid">일상적인 세정 후에 수분 보충 마스크 또는 수렴 효과가 있는 토너를 사용하여 확대된 모공 부위에 여러 차례 겹쳐 놓은 다음 리프레쉬 로션, 크림 등을 사용하여 보습 처리를 하십시오.</string>
    <string name="pore_bottom">리프레쉬 유형 자외선 차단 제품을 사용하고 양산, 모자 등을 사용해 물리적으로 자외선을 차단하십시오. 햇빛 속 자외선으로 인해 피지샘에서 유지 분비가 자극받는 것을 피하십시오.</string>
    <string name="blackhead_top">먼저 미지근한 물로 모공이 열리게 하고 아미노산 클렌저를 사용하여 T 존을 원 형태로 문지른 다음 충분한 물로 깨끗이 헹구십시오.</string>
    <string name="blackhead_mid">매주 2회 각질 세정을 실시해 피부 각질층을 부드럽게 하고 피부 깊숙히 세정하십시오.</string>
    <string name="blackhead_bottom">얼굴과 손의 위생에 주의하십시오. 일반적으로 따뜻한 물로 얼굴을 씻고 알칼리성이 강한 비누의 사용을 피함으로써 모낭이 더 막히고 블랙헤드가 악화되는 것을 방지하십시오.</string>
    <string name="blackhead_last">음식을 싱겁게 먹고 물을 많이 마시십시오. 맵고 기름진 음식을 피해 과도한 유지 분비를 방지하십시오.</string>
    <string name="spot_top">자외선 차단지수가 높은 제품을 선택해 적시에 보충해 바르고 양산, 모자 등의 물리적인 자외선 차단 수단을 통해 자외선으로 인한 피부의 멜라닌 침착을 줄이십시오.</string>
    <string name="spot_mid">비타민 C 및 비타민 E 등은 멜라닌 생성을 방지하거나 줄일 수 있습니다. 직접 드시거나 피부에 바르세요. 비타민 C를 피부에 바르는 경우는 태양광 노출을 피하세요.</string>
    <string name="spot_bottom">충분한 수면은 신체의 내분비를 조절하고 피부 신진 대사를 가속화하며 멜라닌 제거에 도움이 될 수 있습니다.</string>
    <string name="spot_last" tools:ignore="TypographyDashes">충분한 수면을 유지해 색소침착을 예방해주세요\n나이아신아마이드 등 미백제품을 사용해주시고 각질 관리 및 보습관리를 잘해주세요\n자외선 차단제를 꼼꼼히 발라 주시고 얇게 여러 번 덧바르고 2-3시간마다 덧발라주세요\n외출시 선글라스, 모자 ,양산 등을 사용해 물리적인 자외선 차단을 해주세요.</string>
    <string name="joo_top">충분한 수면은 피부 회복을 촉진시키지만 장기적인 수면 부족은 피부의 조기 노화를 초래할 수 있습니다.</string>
    <string name="joo_mid">썬크림 또는 썬로션과 같은 양호한 자외선 차단 기능을 가진 제품을 사용하고, 적시에 보충하여 사용함으로써 자외선으로 인한 피부 손상을 피하십시오.</string>
    <string name="joo_bottom">매일 2000ml의 물을 마시고 항상 보습 제품을 휴대해 적시에 수분을 보충함으로써, 피부에 건조한 미세 주름이 발생하는 것을 피하십시오.</string>
    <string name="joo_last">매일 2000ml의 물을 마시고 항상 보습 제품을 휴대해 적시에 수분을 보충함으로써, 피부에 건조한 미세 주름이 발생하는 것을 피하십시오.</string>
    <string name="yu_top">미온수로 세안하시고, 유수분 관리를 잘해주세요\n수분 베이스의 꾸준한 보습관리로 건강한 피부를 유지하세요\n효소 성분의 각질케어 제품 사용해 각질관리를 해주세요.</string>
    <string name="yu_mid">세안은 수용성 클렌저를 사용해 부드럽고 꼼꼼하게 해주시고, AHA/BHA가 저함량 포함된 토너를 사용하세요.\n세라마이드 등 보습제를 사용해주세요\n신선한 채소와 야채를 드시고 충분한 수분을 섭취하세요.\n피부장벽을 약화시킬 수 잇는 일광노출은 자제하세요.</string>
    <string name="yu_bottom">유분과 자극이 적은 폼이나 무스형의 가벼운 세안제를 사용하세요.\n\n논코메도제닉(모공 막힘 가능성이 낮은 제품) 제품을 사용하는 것이 좋습니다.\n\n당이 많은 음식 섭취 자제하고 손으로 얼굴을 만지는 습관은 자제하세요.\n\n물리적 스크럽제 등 자극적 제품 사용은 지양해주세요.</string>
    <string name="yu_bot">비누는 사용하지 마시고 수용성 클렌저를 사용하세요.\nAHA/BHA 등의 피지조절, 각질 완화 제품을 사용하세요.\n가벼운 젤이나 로션타입의 수분크림을 사용하시고 논코메도제닉(모공 막힘 가능성이 낮은 제품) 제품을 사용하시는 것이 좋습니다.\n맵고 짜고 자극적인 음식은 피해야 하며, 과도한 음주, 흡연, 불규칙한 수면 습관 지양해주세요</string>
    <string name="min_top">되도록 맑은 물을 사용해 세안하십시오. 따뜻한 물이 좋습니다. 또는 중성 페이셜 클렌저를 사용하여 T 존에서 국부 세안을 실시하십시오. 깊숙한 클렌징이나 각질 제거는 금지입니다.</string>
    <string name="min_mid">스킨 케어 제품은 심플할수록 좋습니다. 향수, 알코올, 방부제가 포함되어 있지 않거나 피부 보호벽 복구 기능을 갖춘 제품을 선택하고 메이크업 횟수를 줄이십시오.</string>
    <string name="min_bottom">양산과 모자와 같은 물리적인 자외선 차단 수단을 사용하십시오. 피부가 안정된 후에는 가볍고 얇은 썬크림을 사용하고 중성 메이크업 클렌저를 사용한 후에 다시 세안하십시오.</string>
    <string name="min_last">아침에는 미온수로만 세안하시고, 저녁에는 저자극 세안제를 사용해주세요.\n알코올이 함유된 화장수를 사용하지 마시고, 기초 제품은 무향 제품을 사용하시는 것이 좋습니다.\n콜라겐과 피부막을 재생해주는데 효과가 있는 성분이 들어있는 제품을 사용하세요.\n균형 있는 생활, 적절한 운동과 영양섭취를 해주세요.</string>
    <string name="dark_top">색소 침착에 의한 경우 눈 주변의 습진 등이 중요한 원인이므로, 보습제를 사용하여 습진을 예방하고 습진이 발생된다면 초기에 적절한 피부과 치료를 통해 증상을 개선 시키는 것이 색소 침착을 예방하는데 중요하다. 규칙적인 운동, 균형 잡힌 식사와 충분한 수면을 취하고 스트레스를 받지 않도록 하며 눈 주위 자극을 피하는 등의 생활습관교정도 도움이 될 수 있다.</string>
    <string name="dark_mid">01 눈을 냉온 마사지하십시오\n세안 후에 뜨거운 수건으로 눈을 문지른 후 다시 차가운 수건으로 눈을 마사지하십시오. 냉온 마사지를 번갈아 실시하면 멜라닌을 희석시키고 혈관을 수축시킬 수 있습니다.\n02 아이크림을 사용하십시오\n노화 방지 아이크림 제품을 사용하고 흡수될 때까지 마사지하여 혈관 확장을 줄이고 부종을 제거하십시오\n03 자외선 차단에 주의를 기울이십시오.\n자외선 차단 계수가 높은 제품을 사용하고 적시에 보충하여 바름으로써 자외선으로 인한 눈 아래 부위의 멜라닌 침착을 줄이십시오.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_pore">데일리클렌징 – 약산성 클렌저를 사용하여 미온수로 세안해주세요\n수분보충 및 보습 – 미스트를 수시로 사용하여 촉촉한 피부 유지, 보습제 및 아이크림과\n영양크림을 꾸준히 사용하여 보습관리를 통해 건강한 피부를 유지해주세요\n하루 1.5L이상의 충분한 수분 섭취를 해주세요\n자외선차단 – 외출 30분 전 자외선 차단제를 사용하세요\n지성 피부- 스크럽, 클레이마스크, 효소\n정상, 건성 피부- AHA, 효소 ,고마쥐 각질제거(주1회), 탄력크림, 보습크림 \n\n모공 확대 원인 유발 부분 (미세, 비교적 확대, 확대에 다 수정)\n묵은각질이 쌓이면 피부가 두꺼워지고 모공이 확대되어, 수분을 흡수하지 못하고 영양성분을 유지하지 못하여 피부가 어두운 톤으로 변색되고 건조해지며, 유지분비를 촉진해 모공이 더욱 확대됩니다.\n피지가 과다하게 분비되면 모공이 막히고 각종 노폐물들이 배출되지 못하고 그대로 쌓여서 모공이 더욱 커지게 됩니다.</string>
    <string name="new_pore2">데일리 클렌징 – 약산성 클렌저를 사용하여 세안을 해주세요.\nBHA 또는 미세스크럽으로 주 1회 정도 각질 케어를 해주세요\n수분보충 및 보습 - 모공 토너를 사용하고 수분크림을 잘 발라주세요\n하루 1.5L이상의 충분한 수분 섭취를 해주세요\n자외선차단 – 외출 30분 전 자외선 차단제를 사용하세요</string>
    <string name="new_pore3" tools:ignore="TypographyDashes">데일리 클렌징 – 메이크업보다는 클렌징에 신경 써주세요.\n약산성 클렌저로 세안해주세요. 일주일에 1-2번 정도 스크럽, 효소 각질케어를 통해\n모공을 깨끗하게 해주세요.\n수분 보충 및 쿨링 – 모공 토너를 사용하시고 스킨케어 마지막 단계에 차가운 쿨링 팩 등으로 모공을 조여주면 좋습니다.\n하루 1.5L이상의 충분한 수분 섭취를 해주세요\n자외선차단 – 외출 30분 전 자외선 차단제를 사용하세요(논코메도제닉 or 오일프리)</string>
    <string name="new_bleak">약산성 클렌저를 사용하시고, 수분 관리를 잘해주고, 오일은 모공을 막아 여드름을 유발할 수 있으니 블랙헤드 부위는 논코메도제닉 or 오일프리 제품을 사용해 주세요\n(건성, 정상 피부) : AHA, 고마쥐, 효소\n호호바씨 오일 성분이 함유된 식물성 오일로 모공 깊숙이 자리 잡은 피지와 노폐물을 배출시켜줍니다.\n미지근한 물로 약산성 클렌저로 세안하여 오염물을 제거한 후 찬물로 마무리하여 모공을 조여줍니다.\n(지성, 복합성피부)\nBHA, 미세스크럽, 효소 (각질제거) : 주 1~2회\n클레이 or 퓨리파잉 마스크(과도한 피지조절) : 주 1~2회
</string>
    <string name="new_bleak2">데일리클렌징 –약산성 클렌저를 사용하여 미온수로 세안해주세요\n각질제거- 열흘에(주1회) 한번정도 효소 성분의 각질 케어를 하여 피부 각질층을 부드럽게 해주세요\n보습 - 레티놀, 레티놀팔미테이트 성분 등 보습제를 사용해주세요\n매일 1.5L 이상의 충분한 수분 섭취를 해주세요.
</string>
    <string name="new_bleak3">데일리클렌징-약산성 클렌저를 사용하고 수분크림이나 영양크림으로 수분, 영양 밸런스를 맞춰 주세요.\n각질제거 - 일주일에 한번정도 효소, BHA 각질 케어를 하여 피부 각질층을 부드럽게 해주세요\n보습 – 판테놀, 히알루론산 성분 등 보습제를 사용해주세요\n손으로 얼굴 만지거나 짜고 건드리는 행동을 자제해주세요.
</string>
    <string name="new_bleak4">데일리 클렌징 - 약산성 클렌저를 사용하여 미온수로 세안해 오염물을 제거한 후 찬물로 마무리하여 모공을 조여줍니다.\n각질제거 – 일주일에 2번 정도 각질케어를 하여 피부 각질층을 부드럽게 해주세요\n보습 - 기초제품이나 자외선 차단제 사용시 논코메도제닉 or 오일프리 (모공 막힘 가능성이 낮은 제품) 제품을 사용하시는 것이 좋습니다. \n자외선차단 – 외출 30분 전 자외선 차단제를 사용하세요(논코메도제닉 or 오일프리)\n진드기가 서식하기 쉬운 카펫이나 털 제품 사용은 사용하지 않는 것이 도움이 됩니다.
</string>
    <string name="new_sac">충분한 숙면을 통해 색소침착 예방, 햇빛에 과다 노출되지 않게 주의하세요\n비타민C가 풍부한 과일, 채소등을 섭취하세요.
</string>
    <string name="new_sac2">충분한 수면시간을 유지하세요\n미백 제품을 색소 부위에 사용해주시고 비타민C, E 등 항산화 성분을 섭취하세요.\n자외선 차단제를 발라 주시고 햇빛에 과다 노출되지 않게 주의해주세요.
</string>
    <string name="new_sac3">충분한 수면을 유지해 색소침착을 예방해주세요\n알부틴 등 미백제품을 사용하시고 외출 30분전에 자외선 차단제를 발라주세요.\n각질관리 및 유수분밸런스를 맞추어 주는 것이 중요합니다.\n비타민C 및 비타민E 등은 멜라닌 생성을 방지하거나 줄일 수 있으니 항산화 성분을 섭취하세요.\n토마토, 브로컬리, 당근 등 컬러푸드 섭취도 도움이 됩니다.
</string>
    <string name="new_sac4">충분한 수면을 유지해 색소침착을 예방해주세요\n나이아신아마이드 등 미백제품을 사용해주시고 각질 관리 및 보습관리를 잘해주세요\n자외선 차단제를 꼼꼼히 발라 주시고 얇게 여러 번 덧바르고 2-3시간마다 덧발라주세요\n외출 시 선글라스, 모자, 양산 등을 사용해 물리적인 자외선 차단을 해주세요
</string>
    <string name="new_joo">유, 수분관리를 잘해주세요\n수분을 충분히 공급하면 피부 속을 수분으로 촉촉하게 채워 미세주름 사이를 메워 주기 때문에,\n피부가 건조해졌을 때 깊어지는 주름을 막을 수 있습니다.\n\n충분한 수면을 취하세요 \n충분한 수면 시 피부 회복에 도움을 줍니다. \n(멜라토닌이 많이 분비되는 골든 타임은 밤 10~2시입니다.  밤 11시 전에 주무시면 좋습니다.)\n자외선차단 – 외출 30분 전 자외선 차단제를 사용하세요\n(실외 활동 시 땀이나 물에 자외선 차단제가 지워지니 수시로 덧 발라 주세요)
</string>
    <string name="new_joo2">수분관리를 잘해주세요. 하루 6잔(1.5L)이상의 물을 마시는 것이 좋습니다.\n비타민 C, E 등 영양소를 잘 섭취해주세요\n찡그리거나 인상을 쓰는 습관을 개선해주세요.\n바른 자세를 유지하세요\n자외선차단 – 외출 30분 전 자외선 차단제를 사용하세요\n(실외 활동 시 땀이나 물에 자외선 차단제가 지워지니 수시로 덧 발라 주세요)
</string>
    <string name="new_joo3">수분관리 및 아이크림, 자외선 차단제를 꼼꼼히 발라주세요\n콜라겐 손실은 주름 발생의 원인이 됩니다. 항산화성분이 함유된 화장품을 사용해주세요\n하루 6잔(1.5L)이상의 물을 마시는 것이 좋습니다.\n흡연, 엎드려 자는 습관, 딱딱한 음식 씹기 등은 팔자주름을 만들 수 있으니 자제해주세요\n
</string>
    <string name="new_joo4">수분크림, 아이크림, 탄력제품, 자외선 차단제를 사용해주세요\n컬러 푸드 및 녹차 등 항산화 성분이 풍부한 식품을 섭취하시면 좋습니다.\n옆으로 자거나 눈을 자주 비비는 습관, 턱을 자주 괴는 습관 등은 자제해주세요.\n하루 6잔(1.5L)이상의 물을 마시는 것이 좋습니다. \n콜라겐 및 엘라스틴 조직의 유실은 주름 발생의 원인이 됩니다. 콜라겐 생성에 도움이 되는 성분 함유 화장품 사용하세요\n식습관을 조절하고, 피부의 항산화 케어를 해주는 것이 좋습니다.\n자외선차단 – 외출 30분 전 자외선 차단제를 사용하세요 (논코메도제닉 or 오일프리)
</string>
    <string name="new_yu">미온수로 세안하시고, 유,수분 관리를 잘해주세요\n수분 베이스의 꾸준한 보습관리로 건강한 피부를 유지하세요\n효소 성분의 각질케어 제품을 주1회 사용해 주세요.\n자외선차단 – 외출 30분 전 자외선 차단제를 사용하세요(논코메도제닉 or 오일프리)\n
</string>
    <string name="new_yu2">미온수로 세안하시고, 유,수분 관리를 잘해주세요\n수분 베이스의 꾸준한 보습관리로 건강한 피부를 유지하세요\n효소 성분의 각질케어 제품을 주1회 사용해 주세요.\n자외선차단 – 외출 30분 전 자외선 차단제를 사용하세요(논코메도제닉 or 오일프리)\n
</string>
    <string name="new_yu3">세안은 살리실릭애씨드가 0.5% 미만으로 포함된 기능성 여드름완화제 클렌징 사용을 권장합니다.\n신선한 채소와 야채를 드시고 충분한 수분을 섭취하세요.\n피부장벽을 약화시킬 수 있는 자외선은 피하세요.\n자외선차단 – 외출 30분 전 자외선 차단제를 사용하세요(논코메도제닉 or 오일프리)\n피부과 전문의와 상담을 권유 드립니다.\n
</string>
    <string name="new_yu4">세안은 살리실릭애씨드가 0.5% 미만으로 포함된 기능성 여드름완화제 클렌징 사용을 권장합니다.\n논코메도제닉or 오일프리 (모공 막힘 가능성이 낮은 제품) 제품을 사용하는 것이 좋습니다.\n오일리한 음식 및 인스턴트 등 당이 많은 음식 섭취 자제하고 손으로 얼굴을 만지는 습관은 자제하세요.\n물리적 스크럽제 등 자극적 제품 사용은 지양해주세요.\n자외선차단 – 외출 30분 전 자외선 차단제를 사용하세요 (논코메도제닉 or 오일프리)\n피부과 전문의와 상담을 권유 드립니다.
</string>
    <string name="new_yu5">세안은 살리실릭애씨드가 0.5% 미만으로 포함된 기능성 여드름완화제 클렌징 사용을 권장합니다.\nBHA, PHA등의 피지조절, 각질 완화 제품을 사용하세요.\n가벼운 젤이나 로션 타입의 수분크림을 사용하시고 논코메도제닉 or 오일프리 (모공 막힘 가능성이 낮은 제품) 제품을 사용하시는 것이 좋습니다.  \n맵고 짜고 자극적인 음식은 피해야 하며, 과도한 음주, 흡연, 불규칙한 수면 습관 지양해주세요\n자외선차단 – 외출 30분 전 자외선 차단제를 사용하세요(논코메도제닉 or 오일프리)\n여드름의 원인 에서 유분비 과다 수정- 유분과다\n피부 마이크로바이옴 불균현 -> 마이크로바이옴 불균형\n피부과 전문의와 상담을 권유 드립니다.
</string>
    <string name="_0">0</string>
    <string name="dot">dot</string>
    <string name="중증정도모공">중증정도 모공</string>
    <string name="모공과동일한크기블라블라">모공과 동일한 크기 블라블라</string>
    <string name="유발가능성세정부족">유발 가능성 : 세정 부족</string>
    <string name="skinbackground">skinbackground</string>
    <string name="detailimg">detailimg</string>
    <string name="_100">100</string>
    <string name="가속">가속</string>
    <string name="감속">감속</string>
    <string name="중등">중등</string>
    <string name="약">약</string>
    <string name="_18">18</string>
    <string name="_50">50</string>
    <string name="향산화력">향산화력</string>
    <string name="항당화능">항당화능</string>
    <string name="항노화력">항노화력</string>
    <string name="_42">42</string>
    <string name="피부정보상세보기">피부정보 상세보기</string>
    <string name="결과상세보기">결과 상세 보기</string>
</resources>