<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/dot"
        android:layout_width="5dp"
        android:layout_height="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/purple_dot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/dot" />

    <TextView
        android:textColor="#323232"
        android:fontFamily="@font/notosans_medium"
        android:id="@+id/title"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/중증정도모공"
        app:layout_constraintBottom_toBottomOf="@+id/dot"
        app:layout_constraintStart_toEndOf="@+id/dot"
        app:layout_constraintTop_toTopOf="@+id/dot" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:text="@string/모공과동일한크기블라블라"
        android:textColor="#727272"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:visibility="gone"
        android:textColor="@color/main_theme"
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/유발가능성세정부족"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/content"
        app:layout_constraintTop_toBottomOf="@+id/content" />
</androidx.constraintlayout.widget.ConstraintLayout>